--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mui-datatables": "^3.7.4",
     "react": "^16.14.0",
     "react-apexcharts": "^1.3.7",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^16.14.0",
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.2.0",
